# CeresTutorial

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/: external-ceres.cmake  find_ceres.cmake  find_gtest.cmake
test/: CMakeLists.txt  main.cpp  sample.cpp
